# dragnet_data

./: .gitignore  LICENSE  README.md  setup.cfg
data/: page_uuids.txt  rss_feeds.json  rss_feeds.toml  rss_pages.json  rss_pages.toml
scripts/: archive_data.py  fetch_data.py  fetch_html_data.py  fetch_rss_data.py
src/dragnet_data/: __init__.py  html.py  rss.py  utils.py
