[metadata]
name = dragnet-data
description = NLP, before and after spaCy
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6, <3.9
install_requires =
    extruct >= 0.9.0
    httpx >= 0.12.0
    lxml >= 4.4.0

[options.extras_require]
dev =
    black >= 19.0b0
    mypy >= 0.600
    pylint >= 2.4.0
    pytest >= 4.0.0
    sphinx >= 3.0.0
