[metadata]
name = dragnet-data
version = 0.1.0
description = compile training dataset for dragnet
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6, <3.9
install_requires =
    arrow >= 0.15.0
    extruct >= 0.9.0
    feedparser >= 5.2.0
    ftfy >= 5.5.0
    httpx >= 0.12.0
    lxml >= 4.4.0

[options.extras_require]
dev =
    black >= 19.0b0
    mypy >= 0.600
    pylint >= 2.4.0
    pytest >= 4.0.0
    sphinx >= 3.0.0
